--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "@headlessui/vue": "^1.7.23",
         "@heroicons/vue": "^2.2.0",
         "chart.js": "^4.5.1",
+        "smooth-dnd": "^0.12.1",
         "vue-chartjs": "^5.3.3",
+        "vue-dndrop": "^1.3.4",
         "vue-draggable-next": "^2.3.0"
     }
 }
